# bingo

./: .gitignore  .pre-commit-config.yaml  Dockerfile  Pipfile  README.md  app.py  bingo.py  docker-entrypoint.sh  pyproject.toml  requirements.txt
.github/workflows/: main.yml
bingo/: bingo.py  web.py
bingo/static/: custom.css
bingo/templates/: index.html  play.html
static/: custom.css
templates/: index.html  play.html
